# TR_24_rc_car

./: README.md
3D_models/: battery_holder-Body.stl  battery_holder.20240329-121801.FCBak  battery_holder.FCStd  camera_holder-Body.stl  camera_holder.20240329-115713.FCBak  camera_holder.FCStd  rpi_holder-Body.stl  rpi_holder.20240329-120451.FCBak  rpi_holder.FCStd  servo_holder-Body.stl  servo_holder.20240329-110517.FCBak  servo_holder.FCStd
diagrams/: car_diagram.drawio  rc_diagram.drawio
freertos_code/: README.md  const.h  pins.h  utils.cpp  utils.h
freertos_code/car_MCU/: CMakeLists.txt  FreeRTOSConfig.h  IntQueueTimer.c  IntQueueTimer.h  README.md  autonomousMode.cpp  autonomousMode.h  cameraServoControlTask.cpp  cameraServoControlTask.h  cameraServoTask.cpp  cameraServoTask.h  commandsParser.cpp  commandsParser.h  commandsProcessorTask.cpp  commandsProcessorTask.h  controlArbiterTask.cpp  controlArbiterTask.h  controller.cpp  controller.h  dataParser.cpp  dataParser.h  differentialVehicleModel.cpp  differentialVehicleModel.h  enginesDataParser.cpp  enginesDataParser.h  imuRawTask.cpp  imuRawTask.h  inputResolverTask.cpp  inputResolverTask.h  joystick.cpp  joystick.h  joystickHandlerTask.cpp  joystickHandlerTask.h  main.cpp  main.h  mathematicalMotionModel.cpp  mathematicalMotionModel.h  motorDriver.cpp  motorDriver.h  motorDriverTask.cpp  (+17 more)
freertos_code/rc_MCU/: CMakeLists.txt  FreeRTOSConfig.h  IntQueueTimer.h  README.md  joystickTask.cpp  main.cpp  main.h  rfTxTask.cpp  rfTxTask.h
micropython/: README.md  consts.py  main.py  servo.py  servo_test.py
micropython/car_MCU/: main.py  motor_driver_task.py  rf_rx_task.py  utils.py
micropython/rc_MCU/: joystick_task.py  main.py  rf_tx_task.py
pcb_design/: .$diagram.drawio.bkp  diagram.drawio
pcb_design/car_pcb/: car_pcb.kicad_pcb  car_pcb.kicad_prl  car_pcb.kicad_pro  car_pcb.kicad_sch  car_pcb_traced_1.kicad_pcb  car_pcb_traced_1.kicad_prl  car_pcb_traced_1.kicad_pro  fp-info-cache  ~car_pcb.kicad_pcb.lck
pcb_design/to_factory/: car_pcb-B_Cu.gbl  car_pcb-B_Mask.gbs  car_pcb-B_Paste.gbp  car_pcb-B_Silkscreen.gbo  car_pcb-Edge_Cuts.gm1  car_pcb-F_Cu.gtl  car_pcb-F_Mask.gts  car_pcb-F_Paste.gtp  car_pcb-F_Silkscreen.gto  car_pcb-NPTH-drl_map.gbr  car_pcb-NPTH.drl  car_pcb-PTH-drl_map.gbr  car_pcb-PTH.drl
tools/: Untitled.ipynb  approach.txt  coordinates.json  double_pendulum.ipynb  m.ipynb  manual_motion_algorithm.ipynb  motion.ipynb  plotter.py
tools/cli_tool/: cli.py
tools/commands_parser/: CMakeLists.txt  README.md  bindings.cpp  commandsParser.cpp  commandsParser.h  commands_parser_cli.py
tools/motion_algorithm/: CMakeLists.txt  README.md  approach.txt  auto_motion_algorithm.ipynb  bindings.cpp  config.yml  differentialVehicleModel.cpp  differentialVehicleModel.h  manual_motion_algorithm.ipynb  motion_plotter.py  motion_to_odometer_algorithm.py  odometer_N_to_motion_algorithm.py  path_2.json  plot_pathes.py  requirements.txt  run_motion_to_odometer.py  run_odometer_to_motion.py  unit_tests.py  utils.py
tools/motion_algorithm/data/: config.yml  coordinates.json  path_1.json
